--- a/FoodPlanner/FoodPlanner/SlidePanel.xaml
+++ b/FoodPlanner/FoodPlanner/SlidePanel.xaml
@@ -57,7 +57,7 @@
 					<RowDefinition Height="*"/>
 					<RowDefinition Height="81"/>
 				</Grid.RowDefinitions>
-				<Grid Background="Black" Grid.RowSpan="2" Grid.ColumnSpan="5"/>
+				<Grid Background="DarkGray" Grid.RowSpan="2" Grid.ColumnSpan="5"/>
                 <Button Grid.Row="1" Grid.Column="0" Style="{DynamicResource ButtonIconTemplate}">
 					<Button.Background>
 						<ImageBrush ImageSource="Images/calender.jpg"/>
