--- a/FoodPlanner/FoodPlanner/MainWindow.xaml
+++ b/FoodPlanner/FoodPlanner/MainWindow.xaml
@@ -5,19 +5,23 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Models="clr-namespace:FoodPlanner.Models" 
     xmlns:local="clr-namespace:FoodPlanner"
+    xmlns:ViewModels="clr-namespace:FoodPlanner.ViewModels"
+    xmlns:Views="clr-namespace:FoodPlanner.Views"
     mc:Ignorable="d" x:Class="FoodPlanner.MainWindow"
-    Title="MainWindow" d:DesignHeight="720" d:DesingHeightWidth="405" ResizeMode="NoResize"  Height="720"  Width="405">
+    Title="MainWindow" d:DesignHeight="720" ResizeMode="NoResize"  Height="720"  Width="405">
     <Window.Resources>
-        <CollectionViewSource x:Key="recipeViewSource" d:DesignSource="{d:DesignInstance {x:Type Models:Recipe}, CreateList=True}"/>
-        <CollectionViewSource x:Key="recipeRecipeIngredientsViewSource" Source="{Binding RecipeIngredients, Source={StaticResource recipeViewSource}}"/>
-        <CollectionViewSource x:Key="recipeCookingStepsViewSource" Source="{Binding CookingSteps, Source={StaticResource recipeViewSource}}"/>
+
     </Window.Resources>
-    <Grid DataContext="{StaticResource recipeViewSource}">
+    <Window.DataContext>
+        <ViewModels:MainViewModel/>
+    </Window.DataContext>
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-    <!--
+        <!--
         <Button Content="Open Search" Name="openSearch" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="167" Click="openSearch_Click"/>
         <Button Content="Open Foodplan" Name="openFoodplan" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Width="167" Click="openFoodplan_Click"/>
         <Button Content="Open Inventory" Name="openInventory" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Width="167" Click="openInventory_Click"/>
@@ -25,7 +29,10 @@
 
         <Label Content="Slide Panel Testing" Margin="195,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"></Label>
         -->
-        <local:SlidePanel VerticalAlignment="Bottom" Grid.Row="1"/>
+        
+        <Frame x:Name="Frame" Grid.Row="0"></Frame>
+
+        <local:SlidePanel VerticalAlignment="Bottom" Grid.Row="2"/>
 
         <!--<Image HorizontalAlignment="Left" Height="200" Margin="207,10,0,0" VerticalAlignment="Top" Width="300" Source="http://viskalspise.dk/sites/default/files/imagecache/image_300x300r/hakkebf-og-bnnesalat-med-olive.jpg" Stretch="Fill" />-->
 
