--- a/FoodPlanner/FoodPlanner/Views/ShoppingListPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/ShoppingListPage.xaml
@@ -5,7 +5,6 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="405"
-      Height="720" Width="405"
 	Title="ShoppingListPage">
 
     <Grid>
@@ -16,30 +15,27 @@
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
 
-        <TextBox />
 
-        <Button  Grid.Column="1" Style="{DynamicResource ButtonSlidePannelTemplate}">
-            <Button.Background>
-                <ImageBrush ImageSource="/FoodPlanner;component/Images/plusIcon.png"/>
-            </Button.Background>
-        </Button>
-
-
-        <ListView Grid.Row="1" Grid.ColumnSpan="2" ItemsSource="{Binding}">
+        <ListView Grid.ColumnSpan="2" ItemsSource="{Binding}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="Auto" Header="Name" DisplayMemberBinding="{Binding Path=Ingredient}" />
                     <GridViewColumn Width="Auto" Header="Quantity" DisplayMemberBinding="{Binding Path=Quantity}" />
-
+                    <GridViewColumn Width="Auto" Header="Unit" DisplayMemberBinding="{Binding Path=Ingredient.Unit}" />
 
                 </GridView>
             </ListView.View>
         </ListView>
 
+        <Button Grid.Row="2" Grid.Column="2" Style="{DynamicResource ButtonIconTemplate}">
+            <Button.Background>
+                <ImageBrush ImageSource="/FoodPlanner;component/Images/completeShoppingListIcon.png"/>
+            </Button.Background>
+        </Button>
 
     </Grid>
 </Page>
