--- a/FoodPlanner/FoodPlanner/SlidePanel.xaml
+++ b/FoodPlanner/FoodPlanner/SlidePanel.xaml
@@ -58,12 +58,12 @@
                     <RowDefinition Height="81"/>
                 </Grid.RowDefinitions>
                 <Grid Background="Black" Grid.RowSpan="2" Grid.ColumnSpan="5"/>
-                <Button Grid.Row="1" Grid.Column="0" Style="{DynamicResource ButtonIconTemplate}" Command="{Binding GoToRecipesCommand}">
+                <Button Grid.Row="1" Grid.Column="0" Style="{DynamicResource ButtonIconTemplate}" Command="{Binding GoToMealPlanCommand}">
                     <Button.Background>
                         <ImageBrush ImageSource="Images/calender.jpg"/>
                     </Button.Background>
                 </Button>
-                <Button Grid.Row="1" Grid.Column="1" Style="{DynamicResource ButtonIconTemplate}">
+                <Button Grid.Row="1" Grid.Column="1" Style="{DynamicResource ButtonIconTemplate}" Command="{Binding GoToRecipesCommand}">
                     <Button.Background>
 						<ImageBrush ImageSource="Images/foodplan.jpg"/>
 					</Button.Background>
