--- a/FoodPlanner/FoodPlanner/Views/ShoppingListPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/ShoppingListPage.xaml
@@ -11,27 +11,27 @@
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="37"/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
 
-        <ListView Grid.ColumnSpan="2" ItemsSource="{Binding}">
-            <ListView.View>
+        <ListView Grid.RowSpan="2" Grid.ColumnSpan="2" ItemsSource="{Binding}" >
+            <!--<ListView.View>
                 <GridView>
                     <GridViewColumn Width="Auto" Header="Name" DisplayMemberBinding="{Binding Path=Ingredient}" />
                     <GridViewColumn Width="Auto" Header="Quantity" DisplayMemberBinding="{Binding Path=Quantity}" />
                     <GridViewColumn Width="Auto" Header="Unit" DisplayMemberBinding="{Binding Path=Ingredient.Unit}" />
 
                 </GridView>
-            </ListView.View>
+            </ListView.View>-->
         </ListView>
 
-        <Button Grid.Row="2" Grid.Column="2" Style="{DynamicResource ButtonIconTemplate}">
+        <Button Grid.Row="1" Grid.Column="2" Style="{DynamicResource ButtonIconTemplate}">
             <Button.Background>
                 <ImageBrush ImageSource="/FoodPlanner;component/Images/completeShoppingListIcon.png"/>
             </Button.Background>
