--- a/FoodPlanner/FoodPlanner/Views/ShoppingListPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/ShoppingListPage.xaml
@@ -15,12 +15,12 @@
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="30"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
 
-        <ListView Grid.RowSpan="1" Grid.ColumnSpan="2" ItemsSource="{Binding}">
+        <ListView Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="2" ItemsSource="{Binding}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="Auto" Header="Name" CellTemplate="{StaticResource ShoppingListNameCell}"/>
@@ -30,12 +30,12 @@
             </ListView.View>
         </ListView>
 
-        <Button Grid.Row="1" Grid.Column="2" Style="{DynamicResource ButtonIconTemplate}">
+        <Button Grid.Column="2" Style="{DynamicResource ButtonIconTemplate}">
             <Button.Background>
                 <ImageBrush ImageSource="/FoodPlanner;component/Images/completeShoppingListIcon.png"/>
             </Button.Background>
         </Button>
-        <TextBlock Grid.Row="1" TextWrapping="Wrap" TextAlignment="Center" Background="WhiteSmoke" Text="You are shopping for the next: x Days"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Center" Background="WhiteSmoke" Text="You are shopping for the next: x Days"/>
 
     </Grid>
 </Page>
