--- a/FoodPlanner/FoodPlanner/Views/MealPlanPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/MealPlanPage.xaml
@@ -2,14 +2,19 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ViewModels="clr-namespace:FoodPlanner.ViewModels"
 	x:Class="FoodPlanner.MealPlanPage"
     mc:Ignorable="d"
 	FlowDirection="LeftToRight"
     d:DesignHeight="720" d:DesignWidth="405"
     Title="MealPlan">
 
-	<Grid>
+    <!--<Page.DataContext>
+        <ViewModels:FoodPlanViewModel/>    
+    </Page.DataContext>-->
+
+    <Grid>
 	    <Grid.ColumnDefinitions>
 	        <ColumnDefinition Width="80"/>
 	        <ColumnDefinition/>
