--- a/FoodPlanner/FoodPlanner/Views/RecipesPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/RecipesPage.xaml
@@ -22,15 +22,17 @@
             <RowDefinition Height="30"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        
+
         <Label Margin="5">
-        	<Label.Background>
-        		<ImageBrush ImageSource="/Images/searchIcon.png" Stretch="Uniform"/>
-        	</Label.Background>
+            <Label.Background>
+                <ImageBrush ImageSource="/Images/searchIcon.png" Stretch="Uniform"/>
+            </Label.Background>
         </Label>
-    	<TextBox Grid.Column="1" FontSize="19"/>
-    	<ComboBox Grid.Column="2"/>
-        
-        <ListBox Name="listBoxRecipes" Grid.Row="1" Grid.ColumnSpan="3" ItemTemplate="{StaticResource ListRecipesTemplate}"/>
+
+        <TextBox Grid.Column="1" FontSize="19" Name="Search" Text="{Binding Path=SearchDefine, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=3000}"/>
+
+        <ComboBox Grid.Column="2"/>
+
+        <ListBox Name="listBoxRecipes" Grid.Row="1" Grid.ColumnSpan="3" ItemTemplate="{StaticResource ListRecipesTemplate}"  ItemsSource="{Binding Path=listOstrings, Mode=OneWay}"/>
     </Grid>
 </Page>
