RecipePage eller noet med g i midtet... *hej

--- a/FoodPlanner/FoodPlanner/Views/InventoryPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/InventoryPage.xaml
@@ -13,7 +13,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="100"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -26,7 +26,9 @@
         <TextBox Margin="5 0 60 0" Text="{Binding SearchText, Mode=TwoWay, Delay=500, UpdateSourceTrigger=PropertyChanged}" ></TextBox>
         <Button x:Name="AddButton" Content="Add" HorizontalAlignment="Right" VerticalAlignment="Center" Width="50" Margin="5" IsEnabled="False" />
         <!--</StackPanel>-->
-        <DataGrid x:Name="inventoryIngredientsDataGrid" RowDetailsVisibilityMode="VisibleWhenSelected" Margin="5,4.832,5.063,4.896" ItemsSource="{Binding InventoryIngredientsCollectionViewSource}" EnableRowVirtualization="True" AutoGenerateColumns="False" Grid.Row="2">
+        <ListBox Margin="5" Grid.Row="1" ItemsSource="{Binding FoundIngredients}" />
+        
+        <DataGrid x:Name="inventoryIngredientsDataGrid" RowDetailsVisibilityMode="VisibleWhenSelected" Margin="5,4.832,5.063,4.896" ItemsSource="{Binding InventoryIngredients}" EnableRowVirtualization="True" AutoGenerateColumns="False" Grid.Row="2">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="ingredientColumn" Width="Auto" Header="Ingredient" IsReadOnly="True" Binding="{Binding Ingredient}"/>
                 <DataGridTextColumn x:Name="quantityColumn" Width="Auto" Header="Quantity" Binding="{Binding Quantity}"/>
@@ -46,8 +48,6 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="SaveButton" Content="Save" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Bottom" Width="75" Grid.Row="3"/>
-   
-        <ListBox Margin="5" Grid.Row="1" ItemsSource="{Binding FoundIngredients}" />
+        <Button x:Name="SaveButton" Content="Save" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Bottom" Width="75" Grid.Row="3" Click="SaveButton_Click"/>
     </Grid>
 </Page>
