--- a/FoodPlanner/FoodPlanner/Views/MealPlanPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/MealPlanPage.xaml
@@ -49,5 +49,14 @@
         </Button>
         <TextBlock Text="{Binding Path=WeekString, Mode=OneWay}"  TextWrapping="Wrap" Grid.Row="0" Grid.Column="1" FontSize="48" TextAlignment="Center"/>
         <ListBox Grid.Row="1" Grid.RowSpan="8" Grid.ColumnSpan="2" Margin="78,-2,2,2"/>
+        
+        <ListBox x:Name="MondayMealsListBox" Grid.Row="1" Grid.Column="1" ItemsSource="MondayMeals"/>
+        <ListBox x:Name="TuesdayMealsListBox" Grid.Row="2" Grid.Column="1" ItemsSource="TuesdayMeals"/>
+        <ListBox x:Name="WednesdayMealsListBox" Grid.Row="3" Grid.Column="1" ItemsSource="WednesdayMeals"/>
+        <ListBox x:Name="ThursdayMealsListBox" Grid.Row="4" Grid.Column="1" ItemsSource="TuesdayMeals"/>
+        <ListBox x:Name="FridayMealsListBox" Grid.Row="5" Grid.Column="1" ItemsSource="FridayMeals"/>
+        <ListBox x:Name="SaturdayMealsListBox" Grid.Row="6" Grid.Column="1" ItemsSource="SaturdyMeals"/>
+        <ListBox x:Name="SundayMealsListBox" Grid.Row="7" Grid.Column="1" ItemsSource="SundayMeals"/>
+        
     </Grid>
 </Page>
